fix graphs
